WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224824
REGRESSION(
r275790
) [GTK][WPE] Scrolling rendering fails after the second page
https://bugs.webkit.org/show_bug.cgi?id=224824
Summary
REGRESSION(r275790) [GTK][WPE] Scrolling rendering fails after the second page
Alejandro G. Castro
Reported
2021-04-20 12:42:17 PDT
The scrolling synchronization does not work, we do not have the call to synchronizeStateFromScrollingTree in Nicosia implementation.
Attachments
WIP patch
(3.44 KB, patch)
2021-04-20 12:44 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Patch
(5.13 KB, patch)
2021-04-20 13:23 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2021-04-20 12:44:18 PDT
Created
attachment 426580
[details]
WIP patch This patch fixes the problem, still checking some of the testing issues to confirm it.
Alejandro G. Castro
Comment 2
2021-04-20 13:23:19 PDT
Created
attachment 426586
[details]
Patch
EWS
Comment 3
2021-04-22 00:50:09 PDT
Committed
r276426
(
236889@main
): <
https://commits.webkit.org/236889@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426586
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug